Fixed fullscreen issues: no input into the text field, device not visible when dragged, page not centered in Windows, tooltips not displayed Adjusted resize function: fullscreenimage and device contaienr do not overlap ever now

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@
 
 div.page{
 	position: fixed;
+	top: 0;
+	left: 0;
 	display: block;
 	height: 100%;
 	width: 100%;
